--- a/tests/triggers/fixtures/github-pull-request-full.yaml
+++ b/tests/triggers/fixtures/github-pull-request-full.yaml
@@ -19,10 +19,15 @@ triggers:
       build-desc-template: "build description"
       trigger-phrase: 'retest this please'
       skip-build-phrase: 'no tests'
+      black-list-commit-author:
+        - blacklist
+        - commit
+        - author
       only-trigger-phrase: true
       github-hooks: true
       permit-all: true
       auto-close-on-fail: false
+      display-build-errors-on-downstream-builds: true
       allow-whitelist-orgs-as-admins: true
       white-list-target-branches:
         - master
@@ -43,6 +48,8 @@ triggers:
       failure-comment: "failure comment"
       error-comment: "error-comment"
       cancel-builds-on-update: true
+      comment-file: "/tmp/path"
+      no-commit-status: true
       included-regions:
           - include
           - region
