Added skipWhenFailed for wsCleanup plugin
Signed-off-by: Eren ATAS <eatas.contractor@libertyglobal.com>

--- a/tests/publishers/fixtures/workspace-cleanup-full.yaml
+++ b/tests/publishers/fixtures/workspace-cleanup-full.yaml
@@ -13,5 +13,6 @@ publishers:
       dirmatch: true
       fail-build: false
       clean-parent: true
+      skip-when-failed: true
       external-deletion-command: 'command'
       disable-deferred-wipeout: true
