--- a/tests/triggers/fixtures/github-pull-request-full.yaml
+++ b/tests/triggers/fixtures/github-pull-request-full.yaml
@@ -40,7 +40,7 @@ triggers:
       triggered-status: "triggered status message"
       started-status: "started"
       status-url: "url/to/status"
-      status-add-test-results: "test result with status message"
+      status-add-test-results: false
       success-status: "success message"
       failure-status: "failure message"
       error-status: "error message"
