--- a/tests/yamlparser/fixtures/dynamic-reference-param002.yaml
+++ b/tests/yamlparser/fixtures/dynamic-reference-param002.yaml
@@ -1,7 +1,8 @@
 - job:
-    name: active-choices-job
+    name: dynamic-reference-job
+    folder: unochoice
     parameters:
-      - active-choices:
+      - dynamic-reference:
           name: lorem
           description: ipsum
           script:
@@ -12,8 +13,8 @@
                   ]
               use-groovy-sandbox: false
               script-additional-classpath:
-                  - file:/jar-file-path
-                  - file:/jar-file-path2
+                  - file:/path
+                  - file:/path2
           fallback-script:
               groovy: |-
                   return [
@@ -22,8 +23,8 @@
                   ]
               use-groovy-sandbox: false
               script-additional-classpath:
-                  - file:/jar-file-path
-                  - file:/jar-file-path2
-          choice-type: multi-select
-          enable-filters: true
-          filter-starts-at: 1
+                  - file:/path
+                  - file:/path2
+          choice-type: numbered-list
+          omit-value-field: True
+          referenced-parameters: dolor
