--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@
 six>=1.9.0 # MIT
 PyYAML>=3.10.0,<6 # MIT
 pbr>=1.8 # Apache-2.0
-stevedore>=1.17.1,<3.0.0;python_version=='3.5' # Apache-2.0
-stevedore>=1.17.1;python_version>='3.6' # Apache-2.0
+stevedore>=1.17.1 # Apache-2.0
 python-jenkins>=0.4.15
 fasteners
 Jinja2
